--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-boilerplate",
-  "version": "3.7.0",
-  "description": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
+  "name": "mongact-boilerplate",
+  "version": "1.0",
+  "description": "React Boilerplate with Mongo DB backend OOB",
   "repository": {
     "type": "git",
     "url": "git://github.com/react-boilerplate/react-boilerplate.git"
@@ -10,7 +10,7 @@
     "npm": ">=5",
     "node": ">=8.10.0"
   },
-  "author": "Max Stoiber",
+  "author": "Mike McGrath",
   "license": "MIT",
   "scripts": {
     "analyze:clean": "rimraf stats.json",
@@ -76,7 +76,7 @@
     "loadable-components": "2.2.3",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
-    "nodemon": "^1.18.9",
+    "nodemon": "1.18.9",
     "prop-types": "15.6.2",
     "react": "16.6.0",
     "react-dom": "16.6.0",
