--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "loadable-components": "2.2.3",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
+    "mongoose": "^5.4.1",
     "nodemon": "1.18.9",
     "prop-types": "15.6.2",
     "react": "16.6.0",
