Dependency lock down

--- a/package.json
+++ b/package.json
@@ -61,11 +61,11 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.0.0",
-    "body-parser": "^1.18.3",
-    "chalk": "^2.4.1",
+    "body-parser": "1.18.3",
+    "chalk": "2.4.1",
     "compression": "1.7.3",
     "connected-react-router": "4.5.0",
-    "cors": "^2.8.5",
+    "cors": "2.8.5",
     "cross-env": "5.2.0",
     "express": "4.16.4",
     "fontfaceobserver": "2.0.13",
@@ -79,9 +79,10 @@
     "lodash": "4.17.11",
     "method-override": "^3.0.0",
     "minimist": "1.2.0",
-    "mongoose": "^5.4.1",
-    "morgan": "^1.9.1",
+    "mongoose": "5.4.1",
+    "morgan": "1.9.1",
     "nodemon": "1.18.9",
+    "passport-jwt": "4.0.0",
     "prop-types": "15.6.2",
     "react": "16.6.0",
     "react-dom": "16.6.0",
