--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.0.0",
+    "bcrypt": "^3.0.3",
     "body-parser": "1.18.3",
     "chalk": "2.4.1",
     "compression": "1.7.3",
@@ -68,6 +69,7 @@
     "cors": "2.8.5",
     "cross-env": "5.2.0",
     "express": "4.16.4",
+    "express-session": "^1.15.6",
     "fontfaceobserver": "2.0.13",
     "history": "4.7.2",
     "hoist-non-react-statics": "3.0.1",
@@ -82,7 +84,9 @@
     "mongoose": "5.4.1",
     "morgan": "1.9.1",
     "nodemon": "1.18.9",
+    "passport": "^0.4.0",
     "passport-jwt": "4.0.0",
+    "passport-local": "^1.0.0",
     "prop-types": "15.6.2",
     "react": "16.6.0",
     "react-dom": "16.6.0",
