--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.0.0",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "bcrypt": "^3.0.3",
     "body-parser": "1.18.3",
     "chalk": "2.4.1",
