--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "react-dom": "16.6.0",
     "react-helmet": "5.2.0",
     "react-intl": "2.7.2",
+    "react-quill": "^1.3.3",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "redux": "4.0.1",
