--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "minimist": "1.2.0",
     "mongoose": "5.4.1",
     "morgan": "1.9.1",
+    "mui-datatables": "^2.0.0-beta.55",
     "nodemon": "1.18.9",
     "passport": "^0.4.0",
     "passport-jwt": "4.0.0",
