--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "type": "git",
     "url": "git://github.com/react-boilerplate/react-boilerplate.git"
   },
+  "apidoc": {
+    "title": "My App API DOCS",
+    "url" : "https://api.github.com/v1"
+  },
   "engines": {
     "npm": ">=5",
     "node": ">=8.10.0"
@@ -43,7 +47,8 @@
     "test": "cross-env NODE_ENV=test jest --coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "prettify": "prettier --write"
+    "prettify": "prettier --write",
+    "docs": " apidoc -i server/api/endpoints/ -o docs/"
   },
   "lint-staged": {
     "*.js": [
@@ -63,6 +68,7 @@
     "@babel/polyfill": "7.0.0",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "apidoc": "^0.17.7",
     "bcrypt": "^3.0.3",
     "body-parser": "1.18.3",
     "chalk": "2.4.1",
