--- a/docs/api_project.json
+++ b/docs/api_project.json
@@ -1,15 +1,15 @@
 {
-  "title": "My App API DOCS",
+  "name": "example",
+  "version": "0.1.0",
+  "description": "apiDoc basic example",
+  "title": "Custom apiDoc browser title",
   "url": "https://api.github.com/v1",
-  "name": "mongact-boilerplate",
-  "version": "0.0.1",
-  "description": "React Boilerplate with Mongo DB backend OOB",
   "sampleUrl": false,
   "defaultVersion": "0.0.0",
   "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2019-02-25T23:48:25.626Z",
+    "time": "2019-02-26T00:04:25.450Z",
     "url": "http://apidocjs.com",
     "version": "0.17.7"
   }
